# antiphoria-slop-provenance

./: .cursorrules  .dockerignore  .env.example  .gitignore  .gitleaksignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.notary  KEY_MANAGEMENT_POLICY.md  Makefile  PROVENANCE_RETENTION_POLICY.md  README.md  SECURITY.md  SECURITY_AUDIT_PHASE1_REMEDIATION.md  SECURITY_INCIDENT_ROTATION_CHECKLIST.md  TERMS_OF_USE.md  c2pa.cnf  certifying_human_and_ai_content.md  docker-compose.yml  dummy.tsq  my.diff  pyproject.toml  requirements.in  requirements.txt  run-secure.ps1  run-secure.sh
.github/workflows/: gitleaks-adit.yml  gitleaks.yml  org-quality.yml  qg-scorecard.yml  quality-gate.yml
antiphoria_sdk/: __init__.py  _version.py  canonical.py  chain.py  signing.py  types.py
artifacts/: 20260223T145905Z_e0aa9bc6-7a32-46c4-91f3-aed7d3bd5d11.md  20260223T151216Z_39de9d6f-e5d3-4bc7-9a03-aa7245ccebee.md  20260223T160119Z_5d8ff890-2a2b-414c-8afe-003ac71a0e46.md  20260223T160228Z_5d8ff890-2a2b-414c-8afe-003ac71a0e46.md
docs/: CONTENT_LICENSE_POLICY.md  DISCLAIMER.md  KEY_MANAGEMENT_POLICY.md  LIMITATIONS.md  QUICKSTART.md  SECURITY.md  TERMS_OF_USE.md  WSL2_SETUP.md  architecture_c4.md  bridging-existing-lib.md
scripts/: gen-c2pa-keys.ps1  gen-c2pa-keys.sh  gen-ed25519-keys.py  gen-mldsa-keys.py  gen_mldsa_keys.py  migrate_state_v2.py  run-secure.ps1  run-secure.sh
src/: __init__.py  artifact_serialization.py  canonicalization.py  cli.py  env_config.py  event_bus.py  event_contracts.py  events.py  git_tree_utils.py  http_safe.py  lock_paths.py  logging_config.py  merkle.py  models.py  parsing.py  ports.py  repository.py  research_use_ack.py  secrets_guard.py  webauthn_attestation.py
src/adapters/: c2pa_manifest.py  crypto_notary.py  gemini_engine.py  git_ledger.py  kafka_event_bus.py  key_registry.py  ots_adapter.py  ots_queue.py  provenance_telemetry.py  provenance_worker.py  rfc3161_tsa.py  transparency_log.py
src/commands/: admin.py  maintenance.py  pipeline.py  verification.py
src/commands/parser/: __init__.py  admin.py  maintenance.py  pipeline.py  verification.py
src/domain/: __init__.py  events.py
src/infrastructure/: __init__.py  event_bus.py
src/kafka/: __init__.py  bootstrap.py  event_bus.py  replay_dlq.py  runtime.py  smoke.py
src/kafka/workers/: generator.py  ledger.py  notary.py  provenance.py  telemetry.py
src/policies/: licensing.py
src/repositories/: __init__.py  contexts.py
src/repository/: __init__.py  db.py  dedup.py  sqlite.py  types.py
src/repository/stores/: __init__.py  artifact_store.py  audit_store.py  key_registry_store.py  telemetry_store.py  timestamp_store.py  transparency_store.py
src/runtime/: artifact_resolve.py  bootstrap_topics.py  cli_command_runtime.py  cli_composition.py  cli_routing.py  generator_service.py  ledger_service.py  metrics_report.py  notary_service.py  provenance_service.py  provenance_worker_service.py  replay_dlq.py  service_runtime.py  smoke_kafka_pipeline.py  telemetry_service.py
src/services/: curation_service.py  ots_upgrade.py  provenance_service.py  verification_service.py
src/slop_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_admin_cli.py  test_attest_cli.py  test_c2pa_manifest.py  test_canonicalization.py  test_crypto_notary_c2pa.py  test_env_config.py  test_event_contracts.py  test_gemini_engine_dummy.py  test_git_ledger_secret_guard.py  test_kafka_bus_idempotency.py  test_merkle.py  test_models.py  test_register_cli.py  test_repository_dedupe.py  test_rfc3161_tsa.py  test_runtime_plumbing.py  test_transparency_log.py
tests/antiphoria_sdk/: test_algorithm_agility.py  test_chain_smoke.py  test_hardening.py
tests/e2e/: __init__.py  conftest.py  test_cli_kafka.py  test_cli_local.py
tests/fixtures/: valid_artifact.md
tests/fixtures/keys/: test_ml_dsa.priv  test_ml_dsa.pub
tests/integration/: __init__.py  test_admin_cli.py  test_attest_cli.py  test_c2pa_manifest.py  test_crypto_notary_c2pa.py  test_gemini_engine_dummy.py  test_git_ledger_secret_guard.py  test_key_registry.py  test_ots_adapter_fake.py  test_ots_queue.py  test_ots_upgrade.py  test_register_cli.py  test_repository_dedupe.py  test_rfc3161_tsa.py  test_runtime_plumbing.py  test_sync_transparency_log.py  test_transparency_log.py
tests/stubs/oqs/: __init__.py
tests/unit/: __init__.py  test_canonicalization.py  test_env_config.py  test_event_contracts.py  test_git_tree_utils.py  test_inmemory_event_bus.py  test_lock_paths.py  test_merkle.py  test_models.py  test_parsing.py  test_provenance_telemetry.py  test_repository_contexts.py  test_research_use_ack.py  test_secrets_guard.py
