[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slop-orchestrator"
version = "0.0.1"
description = "Event-driven slop orchestration MVP."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=42.0.0",
    "filelock>=3.13.0",
    "google-genai",
    "pydantic>=2.5.0,<3.0.0",
    "liboqs-python>=0.14.0",
    "c2pa-python>=0.28.0",
    "pygit2>=1.14.0,<2.0.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest-httpserver>=1.0.0"]

[project.scripts]
slop-cli = "src.cli:main"
slop-metrics = "src.runtime.metrics_report:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
namespaces = true

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true
show_error_codes = true
pretty = true

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203",
    "W503",
]
select = [
    "E",
    "F",
    "W",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "S",
]
ignore = [
    "S112",
    "S310",
    "S603",
]

[tool.pytest.ini_options]
testpaths = ["tests", "src/kafka/tests"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",
    "S105",
]
"src/kafka/tests/**/*.py" = [
    "S101",
    "S105",
]
