[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antiphoria-slop-provenance"
version = "0.0.1"
description = "Antiphoria slop provenance: event-driven story generation, signing, and ledger-backed auditability."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=46.0.6",
    "rfc8785>=0.1.4",
    "filelock>=3.20.3",
    "google-genai",
    "pydantic>=2.5.0,<3.0.0",
    "liboqs-python>=0.14.0",
    "c2pa-python>=0.28.0",
    "pygit2>=1.14.0,<2.0.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pip-tools>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpserver>=1.0.0",
    "hypothesis>=6.0.0",
    "mutmut>=2.0.0",
    "ruff>=0.8.0",
]
webauthn = ["fido2>=1.1.0"]

[project.scripts]
slop-cli = "src.cli:main"
slop-metrics = "src.runtime.metrics_report:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
namespaces = true

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true
show_error_codes = true
pretty = true

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203",
    "W503",
]
select = [
    "E",
    "F",
    "W",
]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py311"
extend-exclude = [
  ".venv",
  "venv",
  "build",
  "dist",
  "node_modules",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "UP", "I", "SIM", "A", "S"]
ignore = [
    "E203",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
"**/tests/**/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mutmut]
paths_to_mutate = "src/"
tests_dir = "tests/"
runner = "pytest tests/ -x -q"
